@@ -1,3 +1,9 @@
+2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: couple of cleanups in operationhandling and
+	  initalizing of p_filesystem.
+
 2006-08-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Makefile.am: small fix to pass 'make distcheck'
